--- a/public/style.css
+++ b/public/style.css
@@ -18,21 +18,16 @@ html, body {
   
 
 .buttons{
-  top :10%;
+  position: relative;
+  top: 20%;
+  left : 70%;
 }
 
-.log {
-  color: gray;
-  font-size: 70%;
-  margin: 5px;
-  text-align: center;
-}
 
-.chatArea {
-  height: 100%;
-  padding-bottom: 60px;
-}
 
+
+
+/*チャットの中身*/
 .messages {
   height: 100%;
   margin: 0;
@@ -40,24 +35,36 @@ html, body {
   padding: 10px 20px 10px 20px;
 }
 
+.chatArea
+{
+  position: relative;
+  margin-left: 10%;
+  margin-right: 40%;
+}
+
+li {
+    list-style-type: none; /*点を非表示*/
+    }
+
 .chat{
   margin-top: 1.5em;
   height : 2em;
 }
 
-.main{ 
-  margin-left: 20%;
-  
-  margin-right: 30%;
-}
 .my{
-  border-radius: 0.2em;
-  display: inline;
-    padding: 0.6em;
+  text-align: right;
+  padding-left: 3em;;
 }
-li {
-  border-radius: 0.2em;
-    list-style-type: none; /*点を非表示*/
-    position: relative; /*基準位置*/
-    padding-left: 0.6em;
-    }
+.coment{
+  display: inline;
+  position: relative;
+  border-radius: 0.3em;
+  padding: 0.6em;
+  text-align: right;
+  box-shadow: 0px;
+}
+#message
+{
+  width: 20em;
+  height: 1.5em;
+}
