--- a/public/style.css
+++ b/public/style.css
@@ -33,12 +33,17 @@ html, body {
 
 
 /*チャットの中身*/
-.messages {
+.bc{
+  z-index: -1;
   height: 100%;
+  padding: 10px 20px 10px 20px;
+  background-color: #dddddd;
+
+}
+.messages {
+  z-index: 3;
   margin: 0;
   overflow-y: scroll;
-  padding: 10px 20px 10px 20px;
-  background-color: #ccc;
 }
 
 .chatArea
