--- a/public/style.css
+++ b/public/style.css
@@ -37,7 +37,7 @@ li {
 .menuBtn span{
   position: absolute;
 	width: 50%;
-	height: 2px;
+	height: 3px;
 	left: 0;
 	right: 0;
 	top: 0em;
@@ -58,6 +58,102 @@ li {
 .menuBtn span.menuBtn3 {
 	top: 1.5em;
 /*  上　*/
+}
+
+.show .menuBtn .menuBtn1{
+    -webkit-transform: translateY(.75em) rotate(-45deg);
+    transform: translateY(.75em) rotate(-45deg);
+}
+
+.show .menuBtn .menuBtn2 {
+    opacity: 0;
+    -webkit-transform: translateX(1em);
+	transform: translateX(1em);
+}
+
+.show .menuBtn .menuBtn3{
+    -webkit-transform: translateY(-.75em) rotate(45deg);
+    transform: translateY(-.75em) rotate(45deg);
+}
+/*  -=-=-naviWrap-=-=- */
+.naviWrap{
+    position: fixed;
+	  width: 100%;
+	  height: 100%;
+	  top: 0;
+	  text-align: center;
+    opacity: 0;
+    background: rgba(30, 30, 30, 0.7);
+    visibility: hidden;
+    z-index: 1000;
+    -webkit-transition: .3s ease-out; transition: .3s ease-out;
+    overflow: auto;
+}
+
+/* naviWrap---show */
+.show.naviWrap{
+    opacity: 1;
+    visibility: visible;
+}
+
+/*  -=-=-menubuttons-=-=- */
+.menuButtons{
+  position: absolute;
+  width: 20%;
+  height:100%;
+  top: 0%;
+  background-color: black;
+  color: white;
+  z-index: 1001;
+}
+
+.menuButtons li{
+  position: relative;
+  font-size: 20px;
+    width: 100%;
+    height: 3em;
+    border-top : solid 2px #fff;
+}
+
+/*  -=-=-settings-=-=- */
+.namesetting{
+   position: fixed;
+	  width: 80%;
+	  height: 100%;
+    top: 0;
+    left: 20%;
+	  text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1000;
+    -webkit-transition: .3s ease-out; transition: .3s ease-out;
+    overflow: auto;
+}
+.show.namesetting{
+  opacity: 1;
+    visibility: visible;
+}
+
+.nameSettingArea{
+  position: absolute;
+  left:60px;
+  top: 80px;
+}
+
+#nameInput{
+  height: 1.5em;
+  font-size: 40px;
+  background: none;
+  color: #fff;
+  border-bottom:#fff 2px solid;
+}
+#nameButton{
+  font-size: 40px;
+  height: 60px;
+  width: 120px;
+  border: none;
+  color: #fff;
+  background: #bbb;
 }
 
 /* -=-=-=-=-=-  background -=-=-=-=-=- */
@@ -124,6 +220,9 @@ li {
   text-align: right;
   border: none;  /* 枠線を消す */
   outline: none; 
+}
+.name{
+  font-weight: bold;
 }
 
 .reaction{
